--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,7 @@
 <%= render 'shared/isu_header' %>
+<script type="text/javascript">
+  <%= render 'home/index.js.erb' %>
+</script>
+<div ng-app="reservationsApp">
+  <div ng-view></div>
+</div>
