--- a/app/views/shared/_isu_header.html.erb
+++ b/app/views/shared/_isu_header.html.erb
@@ -1,18 +1,18 @@
-<div class="row isu-header">
-  <div class="col-sm-4">
-    <div class="float-right logo">
-      <strong>ISU</strong>Corp
-    </div>
-  </div>
-  <div class="col-sm-8 slogan">
+<div class="isu-header">
+  <div class="container">
     <div class="row">
-      <div class="col">
-        World Class
+      <div class="logo">
+        <strong>ISU</strong>Corp
       </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        Software Development
+      <div class="slogan">
+        <div>
+          <div>
+            World Class
+          </div>
+          <div>
+            Software Development
+          </div>
+        </div>
       </div>
     </div>
   </div>
