Add reservation contact selector

--- a/app/assets/templates/reservations.html
+++ b/app/assets/templates/reservations.html
@@ -1,26 +1,26 @@
-<div class="row section-header">
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-3">
-        <strong class="section-title">
-          Reservations List
-        </strong>
-      </div>
-      <div class="col-sm-5 description">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tempor accumsan quam at venenatis. Vestibulum semper pellentesque magna in venenatis. Nam semper scelerisque nulla, ut interdum velit faucibus et.
-      </div>
-      <div class="col-sm-4">
+<section-header>
+  <div class="row">
+    <div class="col-md-3">
+      <strong class="section-title">
+        Reservations List
+      </strong>
+    </div>
+    <div class="col-md-5 description">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tempor accumsan quam at venenatis. Vestibulum semper pellentesque magna in venenatis. Nam semper scelerisque nulla, ut interdum velit faucibus et.
+    </div>
+    <div class="col-md-4">
+      <a href="#!/new_reservation">
         <button type="button" class="btn btn-secondary float-right">
           CREATE RESERVATION
         </button>
-      </div>
+      </a>
     </div>
   </div>
-</div>
+</section-header>
 <div class="section-body">
   <div class="container">
     <div class="row">
-      <div class="col-sm-3 sorting-select-column">
+      <div class="col-md-3 sorting-select-column">
         <i class='fas fa-sort-amount-down'></i>
         <select class="form-control" id="sortSelector" ng-model="selectedSorting">
           <option value="" disabled selected>
