--- a/app/assets/stylesheets/reservations.scss
+++ b/app/assets/stylesheets/reservations.scss
@@ -1,3 +1,54 @@
-// Place all the styles related to the reservations controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.section-body {
+  md-input-container {
+    width: 100%;
+
+    input {
+      border: rgba(225, 225, 225, 1) solid 1px;
+      height: 3rem;
+      margin-top: -1rem;
+    }
+
+
+    label:not(.md-no-float):not(.md-container-ignore), md-input-container .md-placeholder {
+      padding-left: 1rem;
+    }
+  }
+
+  #contactTypeSelector {
+    border: rgba(225, 225, 225, 1) solid 1px;
+    height: 3rem;
+    margin-top: .25rem;
+  }
+
+  md-datepicker {
+    width: 100%;
+
+    .md-datepicker-button.md-button.md-icon-button {
+      margin: 0;
+    }
+
+    .md-datepicker-input-container {
+      width: 70%;
+      border: rgba(225, 225, 225, 1) solid 1px;
+
+      input {
+        width: 100%;
+        height: 3rem;
+        margin-top: .25rem;
+        margin-left: 1rem;
+      }
+    }
+  }
+
+  .col-md-3 {
+    padding-left: 10px;
+    padding-right: 0px;
+  }
+
+  md-autocomplete-wrap {
+    box-shadow: none;
+    border: rgba(225, 225, 225, 1) solid 1px;
+    margin-top: .25rem;
+    height: 3rem;
+  }
+}
