--- a/app/views/home/_index.js.erb
+++ b/app/views/home/_index.js.erb
@@ -1,6 +1,7 @@
 var reservationsApp = angular.module('reservationsApp', [
   'ngRoute',
   'ngMaterial',
+  'ngQuill',
   'reservationsControllers',
   'reservationsServices',
   'reservationsDirectives'
