--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,8 +10,16 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
+ *
  *= require bootstrap/dist/css/bootstrap.css
  *= require angular-material/angular-material.scss
+ *
+ *= require quill/dist/quill.snow
+ *
  *= require_tree .
  *= require_self
  */
+
+[ng-quill-editor] {
+  display: block;
+}
