--- a/app/assets/templates/edit_reservation.html
+++ b/app/assets/templates/edit_reservation.html
@@ -15,36 +15,45 @@
     <div class="row contact-data">
       <div class="col-md-3">
         <md-autocomplete
+          required
           md-selected-item="selectedContact"
-          md-search-text="contactName"
+          md-search-text="searchText"
           md-items="item in getContactSuggestions()"
-          md-item-text="item.name">
-          <span md-highlight-text="contactName">
+          md-item-text="item.name"
+          md-selected-item-change="setSelectionAsContact()"
+          md-search-text-change="cleanContact()"
+          placeholder="Contact Name">
+          <span md-highlight-text="searchText">
             {{item.name}}
           </span>
         </md-autocomplete>
       </div>
       <div class="col-md-3">
-        <md-select id="contactTypeSelector" ng-model="contactType">
-          <option value="" disabled selected>
-            Contact Type
-          </option>
-          <option ng-repeat="type in contactTypes">
+        <md-select
+          required
+          ng-model="reservation.contact.type_id"
+          placeholder="Contact Type">
+          <md-option
+            ng-repeat="type in contactTypes"
+            value={{type.id}}>
             {{ type.description }}
-          </option>
+          </md-option>
         </md-select>
       </div>
       <div class="col-md-3">
         <md-input-container>
-          <input type="tel" placeholder="Phone" ng-model="contactPhone">
+          <input required type="tel" placeholder="Phone" ng-model="reservation.contact.phone">
         </md-input-container>
       </div>
       <div class="col-md-3">
         <md-datepicker
-          ng-model="contactBirthDate"
+          class="birthdate-picker"
+          required
+          ng-model="reservation.contact.birthdate"
           md-placeholder="Birth Date"
           ng-disabled="loading"
-          md-max-date="today"></md-datepicker>
+          md-max-date="today">
+        </md-datepicker>
       </div>
     </div>
   </div>
@@ -53,9 +62,27 @@
       <div class="col">
         <ng-quill-editor
           class="editor"
-          ng-model="description"
+          ng-model="reservation.description"
           placeholder="'Reservation description...'"
         ></ng-quill-editor>
+      </div>
+    </div>
+  </div>
+  <div class="container actions-container">
+    <div class="row">
+      <div class="col-md-10">
+        <md-datepicker
+          class="float-right reservation-date-datepicker"
+          required
+          ng-model="reservation.date"
+          md-placeholder="Reservation Date"
+          md-min-date="today">
+        </md-datepicker>
+      </div>
+      <div class="col-md-2">
+        <button type="button" class="btn btn-danger float-right action-button" ng-click="onSendClick()" ng-disabled="!readyToSend()">
+          SEND
+        </button>
       </div>
     </div>
   </div>
