--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -9,6 +9,10 @@ $secondary-color: #5c775c;
 
   .logo {
     font-size: 50px;
+    a {
+      color: inherit;
+      text-decoration: none;
+    }
   }
 
   .slogan {
@@ -53,6 +57,10 @@ $secondary-color: #5c775c;
     height: 100%;
     background-color: white;
     margin-top: .5rem;
+
+    &.notification-container {
+      background-color: transparent;
+    }
 
     .sorting-select-column {
       display: flex;
