--- a/app/assets/templates/edit_reservation.html
+++ b/app/assets/templates/edit_reservation.html
@@ -11,27 +11,48 @@
   </div>
 </section-header>
 <div class="section-body">
+
+  <div class="container notification-container" ng-if="errorMessage">
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+      {{ errorMessage }}
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+  </div>
+
+  <div class="container notification-container" ng-if="notificationMessage">
+    <div class="alert alert-success alert-dismissible fade show" role="alert">
+      {{ notificationMessage }}
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+  </div>
+
   <div class="container">
     <div class="row contact-data">
-      <div class="col-md-3">
+      <div class="col-md-3 contact-data-col">
+        <i class='fas fa-user-friends'></i>
         <md-autocomplete
           required
+          placeholder="Contact Name..."
           md-selected-item="selectedContact"
           md-search-text="searchText"
           md-items="item in getContactSuggestions()"
           md-item-text="item.name"
           md-selected-item-change="setSelectionAsContact()"
-          md-search-text-change="cleanContact()"
-          placeholder="Contact Name">
-          <span md-highlight-text="searchText">
-            {{item.name}}
-          </span>
+          md-search-text-change="cleanContact()">
+            <span md-highlight-text="searchText">
+              {{item.name}}
+            </span>
         </md-autocomplete>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-3 contact-data-col">
+        <i class='fas fa-globe'></i>
         <md-select
           required
-          ng-model="reservation.contact.type_id"
+          ng-model="reservation.contact.contact_type_id"
           placeholder="Contact Type">
           <md-option
             ng-repeat="type in contactTypes"
@@ -40,12 +61,13 @@
           </md-option>
         </md-select>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-3 contact-data-col">
+        <i class='fas fa-phone'></i>
         <md-input-container>
           <input required type="tel" placeholder="Phone" ng-model="reservation.contact.phone">
         </md-input-container>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-3 contact-data-col">
         <md-datepicker
           class="birthdate-picker"
           required
@@ -81,7 +103,7 @@
       </div>
       <div class="col-md-2">
         <button type="button" class="btn btn-danger float-right action-button" ng-click="onSendClick()" ng-disabled="!readyToSend()">
-          SEND
+          {{ loading ? 'SENDING...' : 'SEND' }}
         </button>
       </div>
     </div>
