--- a/app/views/shared/_isu_header.html.erb
+++ b/app/views/shared/_isu_header.html.erb
@@ -2,7 +2,9 @@
   <div class="container">
     <div class="row">
       <div class="logo">
-        <strong>ISU</strong>Corp
+        <a href="/" onclick="window.location.reload(true);">
+          <strong>ISU</strong>Corp
+        </a>
       </div>
       <div class="slogan">
         <div>
