--- a/app/assets/templates/reservations.html
+++ b/app/assets/templates/reservations.html
@@ -22,11 +22,11 @@
     <div class="row">
       <div class="col-md-3 sorting-select-column">
         <i class='fas fa-sort-amount-down'></i>
-        <select class="form-control" id="sortSelector" ng-model="selectedSorting">
+        <select class="form-control" id="sortSelector" ng-model="selectedSorting" ng-change="sortingSelected()">
           <option value="" disabled selected>
             Sort by
           </option>
-          <option ng-repeat="sorting in sortings">
+          <option ng-repeat="sorting in sortings" ng-value="sorting">
             {{ sorting.description }}
           </option>
         </select>
