Include time picker for reservation edit

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,6 +16,8 @@
  *
  *= require quill/dist/quill.snow
  *
+ *= require angular-material-time-picker/dist/md-time-picker.css
+ *
  *= require_tree .
  *= require_self
  */
