--- a/app/views/home/_index.js.erb
+++ b/app/views/home/_index.js.erb
@@ -2,6 +2,7 @@ var reservationsApp = angular.module('reservationsApp', [
   'ngRoute',
   'ngMaterial',
   'ngQuill',
+  'md.time.picker',
   'reservationsControllers',
   'reservationsServices',
   'reservationsDirectives'
