Add pagination directive

--- a/app/assets/templates/reservations.html
+++ b/app/assets/templates/reservations.html
@@ -75,5 +75,6 @@
         </tr>
       </tbody>
     </table>
+    <navigation resource="reservations" ng-if="reservations" on-page-click="onPageClick(page)"/>
   </div>
 </div>
