Add contacts creation

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -40,6 +40,11 @@ $secondary-color: #5c775c;
     font-size: 12px;
     color: $secondary-color;
   }
+
+  .section-header-button {
+    margin-left: auto;
+    margin-top: .5rem;
+  }
 }
 
 .section-body {
